--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost/proposta_db?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://127.0.0.1:3306/proposta_db?createDatabaseIfNotExist=true}
+spring.datasource.username=${DATABASE_USER:root}
+spring.datasource.password=${DATABASE_PASSWORD:root}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 periodicidade.consulta-cartao=${PERIODICIDADE_CONSULTA_CARTAO:120000}
+
+# variáveis do feign
+client.analise=${ANALISES_URL:http://analise:9999}
+client.cartao=${CARTOES_URL:http://contas:8888}
+
