--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 periodicidade.consulta-cartao=${PERIODICIDADE_CONSULTA_CARTAO:120000}
 
-# variáveis do feign
+## variáveis do feign
 client.analise=${ANALISES_URL:http://analise:9999}
 client.cartao=${CARTOES_URL:http://contas:8888}
 
+## spring security resource server configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/proposta}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/proposta/protocol/openid-connect/certs}
