--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ client.cartao=${CARTOES_URL:http://localhost:8888}
 ## spring security resource server configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/proposta}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/proposta/protocol/openid-connect/certs}
+
+## prometheus
+management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoints.prometheus.enabled=true
+management.metrics.tags.aplicacao=${NOME_DA_APLICACAO:servico de proposta}
+management.metrics.tags.ambiente=${AMBIENTE:desenvolvimento}
