--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,13 @@ management.endpoints.web.exposure.include=info,health,prometheus
 management.endpoints.prometheus.enabled=true
 management.metrics.tags.aplicacao=${NOME_DA_APLICACAO:servico de proposta}
 management.metrics.tags.ambiente=${AMBIENTE:desenvolvimento}
+
+## Jaeger 
+# Habilita ou não
+opentracing.jaeger.enabled=${JAEGER_ENABLED:true}
+# Nome do serviço
+opentracing.jaeger.service-name=${spring.application.name}
+# Endereço para enviar os metadados (trace, span, etc)
+opentracing.jaeger.http-sender.url=${JAEGER_ENDPOINT:http://localhost:14268/api/traces}
+# Tipo de amostragem (probabilístico) e sua configuração (1 = 100%)
+opentracing.jaeger.probabilistic-sampler.sampling-rate=${JAEGER_SAMPLER:1}
